writing the three methods.  However, need to remember to write the rhs separately for q and p, and then separately again for u.

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -48,6 +48,7 @@
     "T =  2\n",
     "K=1\n",
     "\n",
+    "n_s = 10\n",
     "integrateTol = 10**-3\n",
     "integrateMaxIter = 40\n",
     "state_dim = 1\n",
@@ -99,6 +100,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "range() integer step argument expected, got float.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-ee38abfebff1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msteps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_end\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mt_start\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_s\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: range() integer step argument expected, got float."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "steps = range(t_start,t_end, float(t_end-t_start)/float(n_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": false
@@ -117,44 +153,39 @@
     "\n",
     "    for i in range(len(ts)-1):\n",
     "        # starting value of u for a single bucket\n",
-    "        qp_vecs = propagate_q_p(u_0, q_0, p_0, n_s)\n",
-    "        u_vecs = propagate_u(u_0, q_0, p_0, n_s)\n",
-    "    \n",
-    "    return qp_vecs, u_vecs\n",
-    "\n",
-    "    # put qp_vecs and u_vecs back together\n",
-    "    '''\n",
-    "    return qpu_vec\n",
-    "\n",
     "        t_start, t_end = ts[i], ts[i+1]\n",
-    "        qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        qp_vecs = propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s)  # assume \"u\" constant, and propagate q and p\n",
+    "        u_vecs = propagate_u(u_0, qp_vecs, t_start, t_end, n_s)      # pass in the resulting q and p values to be used for propagating the \"u\"\n",
+    "        \n",
+    "        qpu_vec_i = np.hstack([qp_vecs, u_vecs])\n",
     "        qpu_vec = qpu_vec_i[-1] # only need the last value\n",
-    "        if i == len(ts)-2 :\n",
+    "        if i == len(ts)-2:\n",
     "            pass\n",
     "            # no need to append since weight = 0 for last value.  But qpu_vec still needs to be updated.\n",
     "        else:\n",
     "            qs.append(qpu_vec[:state_dim])\n",
     "            ps.append(qpu_vec[state_dim:2*state_dim])\n",
     "            us.append(qpu_vec[2*state_dim:])\n",
+    "    return qpu_vec, qs, ps, us  # return values for one entire window\n",
     "\n",
-    "    return qpu_vec, qs, ps, us\n",
-    "    '''\n",
     "    \n",
-    "def propagate_q_p(u_0, q_0, p_0, n_s):\n",
+    "def propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s):\n",
     "    '''\n",
     "    Propagate q and p to end of bucket using rk23\n",
     "    '''\n",
     "    qp_vecs = []\n",
     "    qp_vec = [q_0, p_0]\n",
-    "    for n in range(n_s):\n",
-    "        n_start, n_end = \n",
+    "    steps = np.linspace(t_start,t_end, n_s)\n",
+    "    for i in range(n_s):\n",
+    "        n_start, n_end = steps[i], steps[i+1]\n",
+    "        # TODO: pass in ONLY the q dot and p dot dynamic equations for the rhs\n",
     "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
     "        qp_vecs.append(qp_vec[-1])\n",
     "    return qp_vecs\n",
     "    \n",
     "    \n",
     "def propagate_u(u_0, q_0, p_0, n_s): \n",
-    "     '''\n",
+    "    '''\n",
     "    '''\n",
     "    \n",
     "    "
