Code is sketched out.  Now, I'm going to figure out how to carry around the dynamics (rhs) for propagating q and p, and also propagate u.

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -96,41 +96,6 @@
     "    p_dot = -1*H_T_q(q,p,u)\n",
     "    u_dot = -Gamma*Q_u(q,p,u)\n",
     "    return np.hstack([q_dot, p_dot, u_dot])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "range() integer step argument expected, got float.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-ee38abfebff1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msteps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_end\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mt_start\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_s\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: range() integer step argument expected, got float."
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "steps = range(t_start,t_end, float(t_end-t_start)/float(n_s))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
@@ -175,7 +140,7 @@
     "    '''\n",
     "    qp_vecs = []\n",
     "    qp_vec = [q_0, p_0]\n",
-    "    steps = np.linspace(t_start,t_end, n_s)\n",
+    "    steps = np.linspace(t_start,t_end, n_s+1)\n",
     "    for i in range(n_s):\n",
     "        n_start, n_end = steps[i], steps[i+1]\n",
     "        # TODO: pass in ONLY the q dot and p dot dynamic equations for the rhs\n",
@@ -184,11 +149,20 @@
     "    return qp_vecs\n",
     "    \n",
     "    \n",
-    "def propagate_u(u_0, q_0, p_0, n_s): \n",
+    "def propagate_u(u_0, qp_vecs, t_start, t_end, n_s): \n",
     "    '''\n",
+    "    Propagate u based on q and p values\n",
+    "    qp_vecs (list of 1-D numpy arrays): each array in this list holds\n",
     "    '''\n",
-    "    \n",
-    "    "
+    "    u_vecs = []\n",
+    "    steps = np.linspace(t_start,t_end, n_s)\n",
+    "    for i in range(n_s):\n",
+    "        n_start, n_end = steps[i], steps[i+1]\n",
+    "        # TODO: pass in ONLY the q dot and p dot dynamic equations for the rhs\n",
+    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        qp_vecs.append(qp_vec[-1])\n",
+    "    return qp_vecs\n",
+    "        "
    ]
   },
   {
@@ -197,9 +171,21 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stop' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "qpu_vec, qs, ps, us = propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma)"
+    "print stop"
    ]
   },
   {
@@ -212,10 +198,73 @@
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0.])"
+       "1"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qpu_vec # 1 array which contains state, costate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test the propagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s):\n",
+    "# propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma, n_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0])"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -271,24 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[array([0.])]\n",
-      "[array([0.])]\n",
-      "[array([0.])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# outputs:\n",
     "\n",
@@ -310,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -355,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
