Started to change things up a little bit with calling the RHS for propagating the dynamics:     - inside a sliding window instance there will be two methods you need to define:       - qp_rhs       - u_rhs    these take the place of the hold H_Tp and H_T_q and Q_u

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -106,7 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "def propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma, n_s):\n",
+    "def propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma, n_s, sliding_window_instance):\n",
     "    '''\n",
     "    n_s is number of steps\n",
     "    '''\n",
@@ -119,8 +119,8 @@
     "    for i in range(len(ts)-1):\n",
     "        # starting value of u for a single bucket\n",
     "        t_start, t_end = ts[i], ts[i+1]\n",
-    "        qp_vecs = propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s)  # assume \"u\" constant, and propagate q and p\n",
-    "        u_vecs = propagate_u(u_0, qp_vecs, t_start, t_end, n_s)      # pass in the resulting q and p values to be used for propagating the \"u\"\n",
+    "        qp_vecs = propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s, sliding_window_instance)  # assume \"u\" constant, and propagate q and p\n",
+    "        u_vecs = propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance)      # pass in the resulting q and p values to be used for propagating the \"u\"\n",
     "        \n",
     "        qpu_vec_i = np.hstack([qp_vecs, u_vecs])\n",
     "        qpu_vec = qpu_vec_i[-1] # only need the last value\n",
@@ -134,7 +134,7 @@
     "    return qpu_vec, qs, ps, us  # return values for one entire window\n",
     "\n",
     "    \n",
-    "def propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s):\n",
+    "def propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s, sliding_window_instance):\n",
     "    '''\n",
     "    Propagate q and p to end of bucket using rk23\n",
     "    '''\n",
@@ -143,13 +143,12 @@
     "    steps = np.linspace(t_start,t_end, n_s+1)\n",
     "    for i in range(n_s):\n",
     "        n_start, n_end = steps[i], steps[i+1]\n",
-    "        # TODO: pass in ONLY the q dot and p dot dynamic equations for the rhs\n",
-    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.qp_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
     "        qp_vecs.append(qp_vec[-1])\n",
     "    return qp_vecs\n",
     "    \n",
     "    \n",
-    "def propagate_u(u_0, qp_vecs, t_start, t_end, n_s): \n",
+    "def propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance): \n",
     "    '''\n",
     "    Propagate u based on q and p values\n",
     "    qp_vecs (list of 1-D numpy arrays): each array in this list holds\n",
@@ -159,10 +158,54 @@
     "    for i in range(n_s):\n",
     "        n_start, n_end = steps[i], steps[i+1]\n",
     "        # TODO: pass in ONLY the q dot and p dot dynamic equations for the rhs\n",
-    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.u_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
     "        qp_vecs.append(qp_vec[-1])\n",
     "    return qp_vecs\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a=np.array([3,2,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "b = np.array([1,3,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 2, 4, 1, 3, 2])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([a,b])"
    ]
   },
   {
