Forgot that the function signature for RHS must always be the same:     - t, y_0, **kwargs So, changing the rhs methods inside the sliding window class to be able to handle that.

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -134,16 +134,16 @@
     "    return qpu_vec, qs, ps, us  # return values for one entire window\n",
     "\n",
     "    \n",
-    "def propagate_q_p(u_0, q_0, p_0, t_start, t_end, n_s, sliding_window_instance):\n",
+    "def propagate_q_p(q_0, p_0, u_0, t_start, t_end, n_s, sliding_window_instance):\n",
     "    '''\n",
     "    Propagate q and p to end of bucket using rk23\n",
     "    '''\n",
     "    qp_vecs = []\n",
-    "    qp_vec = [q_0, p_0]\n",
+    "    qp_vec = [q_0, p_0]  # pass in all three: q_0, p_0, u_0, but in the qp_rhs function\n",
     "    steps = np.linspace(t_start,t_end, n_s+1)\n",
     "    for i in range(n_s):\n",
     "        n_start, n_end = steps[i], steps[i+1]\n",
-    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.qp_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.qp_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma, u_0 = u_0)\n",
     "        qp_vecs.append(qp_vec[-1])\n",
     "    return qp_vecs\n",
     "    \n",
@@ -151,16 +151,16 @@
     "def propagate_u(u_0, qp_vecs, t_start, t_end, n_s, sliding_window_instance): \n",
     "    '''\n",
     "    Propagate u based on q and p values\n",
-    "    qp_vecs (list of 1-D numpy arrays): each array in this list holds\n",
+    "    u_vecs (list of 1-D numpy arrays):\n",
     "    '''\n",
     "    u_vecs = []\n",
     "    steps = np.linspace(t_start,t_end, n_s)\n",
     "    for i in range(n_s):\n",
     "        n_start, n_end = steps[i], steps[i+1]\n",
-    "        # TODO: pass in ONLY the q dot and p dot dynamic equations for the rhs\n",
-    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.u_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
-    "        qp_vecs.append(qp_vec[-1])\n",
-    "    return qp_vecs\n",
+    "        qp_vec = qp_vecs[i]\n",
+    "        u_vec, t, failFlag, iter_i = ode.ode_rk23(sliding_window_instance.u_rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        u_vecs.append(u_vec[-1]) # one u_vec for each step, append them and you have all the u_vecs for one bucket\n",
+    "    return u_vecs\n",
     "        "
    ]
   },
